# AoC2024

./: .gitignore  README.md  helpers.py  itsanewday.py  main.py  pyproject.toml
day1/: __init__.py
day2/: __init__.py
day3/: __init__.py
day4/: __init__.py
day5/: __init__.py
day6/: __init__.py
day7/: __init__.py
dayX_/: __init__.py
